# geospatial_python_sneak_peak

./: README.md  apartment_search.ipynb  pyproject.toml  requirements.txt
