[tool.poetry]
name = "fossgis_bonus"
version = "0.1.0"
description = ""
authors = ["Christina Ludwig <christina.ludwig@uni-heidelberg.de>"]

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.9"
folium = "^0.12.1"
matplotlib = "^3.5.1"
requests = "^2.27.1"
openrouteservice = "^2.3.3"
ohsome = "^0.1.0-rc.2"
ipython = "^8.0.1"
ipykernel = "^6.9.0"
ipyleaflet = "^0.15.0"
jupyter-contrib-nbextensions = "^0.5.1"
ipywidgets = "^7.6.5"
pygeos = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

